--- a/app/src/styles/partials/_onderwerp-buttons.scss
+++ b/app/src/styles/partials/_onderwerp-buttons.scss
@@ -15,13 +15,12 @@
 		margin-bottom: 1em;
 		font-weight: 600;
 
-
-		&:first-of-type{
-			margin-right: 1em;
-
+		&:nth-of-type(even){
+			margin-left: 1em;
 		}
 		&:last-of-type {
-			margin-left: 1em;
+			max-width: calc(50% - 0.5em);
+			margin: auto;
 		}
 	}
 }
