--- a/app/src/styles/partials/_cijfer-text.scss
+++ b/app/src/styles/partials/_cijfer-text.scss
@@ -1,5 +1,7 @@
 .cijfer-text-container {
 	margin-top: 1em;
+
+
 	.numbers {
 		display: flex;
 		.number-container {
@@ -7,6 +9,7 @@
 			flex: 1;
 			&:first-of-type {
 				margin-right: 1em;
+
 			}
 			.big-number {
 				text-align: center;
@@ -16,15 +19,19 @@
 				font-size: 2em;
 				line-height: normal;
 
+
+
 				.bigger-number {
-					font-size: 2em;
+					font-size: 3em;
 				}
 			}
 			.migratieachtergrond-rectangle{
-				height: 30px;
-				width: 100%;
-				border-radius: 8px;
+				height: 20px;
+				width: 230px;
+				border-radius: 6px;
 				margin-bottom: 1em;
+				margin: auto;
+
 			}
 			.red {
 				background-color: $color-red;
