--- a/app/src/styles/partials/_container.scss
+++ b/app/src/styles/partials/_container.scss
@@ -1,5 +1,10 @@
 .container {
 	margin: 0 1em;
+
+	max-width: 1080px;
+	@include mq("desktop") {
+		margin: auto;
+	}
 }
 
 .topic-container {
@@ -18,6 +23,9 @@
 
 .counter-container {
 	margin-bottom: 1em;
+	// height: 30px;
+	// width: 250px;
+
 }
 
 .video-container {
@@ -25,4 +33,8 @@
 		width: 100%;
 		height: 100%;
 	}
+}
+
+.view-height {
+	min-height: 100vh;
 }
