--- a/app/src/styles/partials/_onderwerp-buttons.scss
+++ b/app/src/styles/partials/_onderwerp-buttons.scss
@@ -15,6 +15,10 @@
 		margin-bottom: 1em;
 		font-weight: 600;
 
+		@include mq("desktop") {}
+
+	}
+
 		&:nth-of-type(even){
 			margin-left: 1em;
 		}
