--- a/app/src/styles/partials/_onderwerp-buttons.scss
+++ b/app/src/styles/partials/_onderwerp-buttons.scss
@@ -3,6 +3,7 @@
 	justify-content: space-between;
 	flex-wrap: wrap;
 	padding: 1em 0;
+	margin: 0 1em;
 
 	.onderwerp-button {
 		flex: 45%;
@@ -16,9 +17,9 @@
 		font-weight: 600;
 
 		@include mq("desktop") {
-		flex: 1;
-		margin-right: 1em;
-	}
+			flex: 1;
+			margin-right: 1em;
+		}
 
 		&:nth-of-type(even){
 			margin-left: 1em;
