--- a/app/src/styles/partials/_onderwerp-buttons.scss
+++ b/app/src/styles/partials/_onderwerp-buttons.scss
@@ -5,6 +5,11 @@
 	padding: 1em 0;
 	margin: 0 1em;
 
+@include mq("desktop"){
+	max-width: 90%;
+	margin: auto;
+}
+
 	.onderwerp-button {
 		flex: 45%;
 		background-color: $color-yellow;
@@ -18,7 +23,7 @@
 
 		@include mq("desktop") {
 			flex: 1;
-			margin-right: 1em;
+			margin-right: 1.2em;
 		}
 
 		&:nth-of-type(even){
