--- a/app/src/styles/partials/_cijfer-text.scss
+++ b/app/src/styles/partials/_cijfer-text.scss
@@ -60,13 +60,29 @@
 
 .medium-numbers {
 	text-align: center;
+	@include mq("desktop"){
+		display: flex;
+	}
+
 	.medium-container {
 		margin-bottom: 1em;
 		p {
 			margin: 0;
 		}
+		@include mq("desktop"){
+			display: flex;
+    	flex-direction: column;
+    	align-items: center;
+		}
+
 		.number-container {
 			display: flex;
+
+			@include mq("desktop") {
+						max-width: 230px;
+					}
+
+
 			.medium-number-container{
 				flex: 1;
 				&:first-of-type {
@@ -78,6 +94,9 @@
 					font-family: $title-family;
 					font-size: 1.5em;
 					line-height: normal;
+					@include mq("desktop"){
+						font-size: 3em;
+					}
 
 					.bigger-number {
 						font-size: 1.5em;
@@ -88,6 +107,11 @@
 					width: 100%;
 					border-radius: 8px;
 					margin-bottom: 0.5em;
+					margin: auto;
+
+					@include mq("desktop"){
+						height: 15px;
+					}
 				}
 				.red {
 					background-color: $color-red;
