--- a/app/src/styles/partials/_onderwerp-buttons.scss
+++ b/app/src/styles/partials/_onderwerp-buttons.scss
@@ -16,6 +16,10 @@
 		margin-bottom: 1em;
 		font-weight: 600;
 
+		@include mq ("phone-wide") {
+
+		}
+
 		@include mq("desktop") {
 			flex: 1;
 			margin-right: 1em;
@@ -40,4 +44,8 @@
 			}
 		}
 	}
+}
+
+.footer {
+	display: none;
 }
