--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -1,8 +1,3 @@
-#vertrouwen-heatmap{
-	h2 {
-		min-height: 57px;
-	}
-}
 .visualisatie-container {
 	display: flex;
 	flex-direction: column;
@@ -80,5 +75,13 @@
 	}
 	.pie-chart-legend {
 
+	}
+}
+.barchart-viz-container {
+
+	.barchart-container {
+		.barchart {
+
+		}
 	}
 }
