--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -41,13 +41,17 @@
 	width: 100%;
 	height: 100%;
 }
+.LegendaFlex{
+	display: flex;
+	flex-direction: row;
+}
 
 .legend {
-	display: flex;
+	// display: flex;
 	.legend-item {
 		flex: 1;
 		display: flex;
-		flex-direction: column;
+		// flex-direction: column;
 		padding: 0 0.25em;
 		justify-content: center;
 		align-items: center;
