--- a/app/src/styles/partials/_variables.scss
+++ b/app/src/styles/partials/_variables.scss
@@ -6,6 +6,7 @@ $color-red:#fc3e46;
 $padding-one: 1em;
 $title-family: "Rubik", sans-serif;
 $text-family: "Roboto", sans-serif;
+$background: center / contain no-repeat;
 
 $breakpoints: (
 	"phone":        375px,
