--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -42,16 +42,16 @@
 	height: 100%;
 }
 .LegendaFlex{
-	display: flex;
-	flex-direction: row;
+	@include mq("desktop") {
+		display: flex;
+		flex-direction: row;
+	}
 }
 
 .legend {
-	// display: flex;
 	.legend-item {
 		flex: 1;
 		display: flex;
-		// flex-direction: column;
 		padding: 0 0.25em;
 		justify-content: center;
 		align-items: center;
@@ -95,6 +95,15 @@
 				width: 100%;
 				height: 100%;
 			}
+		}
+	}
+}
+.barchart-container {
+	margin-bottom: 1em;
+	.barchart {
+		img {
+			width: 100%;
+			height: 100%;
 		}
 	}
 }
