--- a/app/src/styles/partials/_no-classes.scss
+++ b/app/src/styles/partials/_no-classes.scss
@@ -79,28 +79,28 @@ h3 {
 	}
 }
 
-@include mq("tablet") {
-	p {
-		font-size: 24px;
-	}
-	h1 {
-		font-size: 3em;
-	}
-	h2 {
-		font-size: 2.5em;
-	}
-	h3 {
-		font-size: 2em;
-	}
-	.counter-container {
-		p {
-			font-size: 1em;
-		}
-		.counter {
-			font-size: 1.5em;
-		}
-	}
-}
+// @include mq("tablet") {
+// 	p {
+// 		font-size: 24px;
+// 	}
+// 	h1 {
+// 		font-size: 3em;
+// 	}
+// 	h2 {
+// 		font-size: 2.5em;
+// 	}
+// 	h3 {
+// 		font-size: 2em;
+// 	}
+// 	.counter-container {
+// 		p {
+// 			font-size: 1em;
+// 		}
+// 		.counter {
+// 			font-size: 1.5em;
+// 		}
+// 	}
+// }
 
 body,
 html {
