--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -41,6 +41,7 @@
 	width: 100%;
 	height: 100%;
 }
+
 .LegendaFlex{
 	display: flex;
 	flex-direction: row;
@@ -68,6 +69,10 @@
 .pie-chart-viz-container {
 	display: flex;
 	flex-direction: column;
+
+	@include mq("desktop"){
+		margin-top: 5em;
+	}
 	.pie-chart-container {
 		flex: 1;
 		height: 300px;
@@ -88,8 +93,12 @@
 	}
 }
 .barchart-viz-container {
+	@include mq("desktop"){
+		margin-top: 5em;
+	}
 	.barchart-container {
 		margin-bottom: 1em;
+
 		.barchart {
 			img {
 				width: 100%;
