--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -49,19 +49,52 @@
 }
 
 .legend {
+	display: flex;
+	max-width: 500px;
+	@include mq("desktop") {
+		flex-direction: column;
+		justify-content: flex-start;
+	}
 	.legend-item {
 		flex: 1;
 		display: flex;
 		padding: 0 0.25em;
-		justify-content: center;
 		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+
+		@include mq("desktop") {
+			flex-direction: row;
+			justify-content: flex-start;
+			align-items: center;
+			margin-bottom: 0.5em;
+		}
 		.legend-color {
 			width: 100%;
 			height: 16px;
+			@include mq("desktop") {
+				width: 42px;
+				height: 24px;
+				margin-right: 0.25em;
+			}
 		}
 		p {
 			font-size: 10px;
+
+			@include mq("desktop") {
+				font-size: 16px;
+				margin-bottom: 0;
+			}
 		}
+	}
+}
+
+.visualisatie-right {
+	@include mq("desktop") {
+		display: flex;
+		align-items: flex-end;
+		margin-bottom: 7em;
+		margin-left: 2em;
 	}
 }
 
