--- a/app/src/styles/partials/_container.scss
+++ b/app/src/styles/partials/_container.scss
@@ -1,3 +1,17 @@
+.inleiding {
+	h1 { @include mq("desktop") {
+ 		margin-top: 2em;
+
+ 	}
+ 	}
+
+ p { @include mq("desktop") {
+ 	margin-top: 2em;
+ 	margin-bottom: 1em;
+ }
+ }
+}
+
 .container {
 	margin: 0 1em;
 
