--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -29,6 +29,7 @@
 	}
 	p {
 		margin-bottom: 0;
+
 	}
 }
 
@@ -70,9 +71,9 @@
 	display: flex;
 	flex-direction: column;
 
-	@include mq("desktop"){
-		margin-top: 5em;
-	}
+	// @include mq("desktop"){
+	// 	margin-top: 5em;
+	// }
 	.pie-chart-container {
 		flex: 1;
 		height: 300px;
@@ -93,9 +94,9 @@
 	}
 }
 .barchart-viz-container {
-	@include mq("desktop"){
-		margin-top: 5em;
-	}
+	// @include mq("desktop"){
+	// 	margin-top: 5em;
+	// }
 	.barchart-container {
 		margin-bottom: 1em;
 
