--- a/docs/scripts/bundle.css
+++ b/docs/scripts/bundle.css
@@ -1,8 +1,28 @@
+@media only screen and (min-width: 1248px) {
+  .inleiding h1 {
+    margin-top: 2em; } }
+
+@media only screen and (min-width: 1248px) {
+  .inleiding p {
+    margin-top: 2em;
+    margin-bottom: 1em; } }
+
 .container {
   margin: 0 1em; }
+  @media only screen and (min-width: 768px) {
+    .container {
+      margin: auto;
+      max-width: 600px; } }
+  @media only screen and (min-width: 1248px) {
+    .container {
+      max-width: 700px; } }
+
+.view-height {
+  position: relative; }
 
 .topic-container {
-  display: none; }
+  display: none;
+  margin-top: 5em; }
   .topic-container .typed-string {
     display: none; }
   .topic-container h1 {
@@ -14,9 +34,20 @@
 .counter-container {
   margin-bottom: 1em; }
 
-.video-container video {
-  width: 100%;
-  height: 100%; }
+.video-container {
+  height: 80%; }
+  @media only screen and (min-width: 1248px) {
+    .video-container {
+      width: 800px;
+      height: 500px;
+      margin: auto;
+      margin-bottom: 2em; } }
+  .video-container video {
+    width: 100%;
+    height: 100%; }
+
+.view-height {
+  min-height: 100vh; }
 
 * {
   box-sizing: border-box; }
@@ -63,6 +94,20 @@ h2 {
 h3 {
   font-size: 1.25em; }
 
+@media only screen and (min-width: 480px) {
+  p {
+    font-size: 20px; }
+  h1 {
+    font-size: 2.5em; }
+  h2 {
+    font-size: 1.75em; }
+  h3 {
+    font-size: 1.375em; }
+  .counter-container p {
+    font-size: 1em; }
+  .counter-container .counter {
+    font-size: 1.5em; } }
+
 body,
 html {
   margin: 0;
@@ -72,7 +117,12 @@ html {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  padding: 1em 0; }
+  padding: 1em 0;
+  margin: 0 1em; }
+  @media only screen and (min-width: 1248px) {
+    .onderwerp-buttons-container {
+      max-width: 90%;
+      margin: auto; } }
   .onderwerp-buttons-container .onderwerp-button {
     flex: 45%;
     background-color: #fff33d;
@@ -83,49 +133,28 @@ html {
     font-size: 1em;
     margin-bottom: 1em;
     font-weight: 600; }
+    @media only screen and (min-width: 1248px) {
+      .onderwerp-buttons-container .onderwerp-button {
+        flex: 1;
+        margin-right: 1.2em; } }
     .onderwerp-buttons-container .onderwerp-button:nth-of-type(even) {
       margin-left: 1em; }
+      @media only screen and (min-width: 1248px) {
+        .onderwerp-buttons-container .onderwerp-button:nth-of-type(even) {
+          margin-left: 0; } }
     .onderwerp-buttons-container .onderwerp-button:last-of-type {
       max-width: calc(50% - 0.5em);
       margin: auto; }
+      @media only screen and (min-width: 1248px) {
+        .onderwerp-buttons-container .onderwerp-button:last-of-type {
+          margin-right: 0;
+          margin-bottom: 1em;
+          margin-top: 0;
+          margin-left: 0;
+          max-width: auto; } }
 
-header {
-  background-color: #000;
-  padding: 1em; }
-  header .flex-parent {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column; }
-    header .flex-parent .flex-child {
-      flex: 1; }
-      header .flex-parent .flex-child:first-of-type {
-        padding-bottom: 1em; }
-      header .flex-parent .flex-child .logo {
-        background: left/contain no-repeat url("../images/logo.svg");
-        width: 100%;
-        height: 5em; }
-    header .flex-parent .titles h1 {
-      color: #fff33d;
-      font-size: 1.5em;
-      text-transform: uppercase; }
-    header .flex-parent .titles h2 {
-      color: #fff;
-      font-size: 1.25em; }
-
-div.tooltip {
-  position: absolute;
-  text-align: center;
-  width: 60px;
-  height: 28px;
-  padding: 2px;
-  font: 12px sans-serif;
-  background: lightsteelblue;
-  border: 0px;
-  border-radius: 8px;
-  pointer-events: none; }
-
-#vertrouwen-heatmap h2 {
-  min-height: 57px; }
+.footer {
+  display: none; }
 
 .visualisatie-container {
   display: flex;
@@ -141,9 +170,18 @@ div.tooltip {
   border-radius: 8px;
   padding: 1em;
   text-align: center; }
+  @media only screen and (min-width: 1248px) {
+    .counter-container {
+      max-width: 200px;
+      position: absolute;
+      left: -35%;
+      top: 0; } }
   .counter-container .counter {
+    margin-bottom: 0;
     font-weight: bold;
     font-size: 1.5em; }
+  .counter-container p {
+    margin-bottom: 0; }
 
 .svg-container {
   width: 100%;
@@ -154,20 +192,52 @@ div.tooltip {
   width: 100%;
   height: 100%; }
 
+@media only screen and (min-width: 1248px) {
+  .LegendaFlex {
+    display: flex;
+    flex-direction: row; } }
+
 .legend {
-  display: flex; }
+  display: flex;
+  max-width: 500px; }
+  @media only screen and (min-width: 1248px) {
+    .legend {
+      flex-direction: column;
+      justify-content: flex-start; } }
   .legend .legend-item {
     flex: 1;
     display: flex;
-    flex-direction: column;
     padding: 0 0.25em;
+    align-items: center;
     justify-content: center;
-    align-items: center; }
+    flex-direction: column; }
+    @media only screen and (min-width: 1248px) {
+      .legend .legend-item {
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+        margin-bottom: 0.5em; } }
     .legend .legend-item .legend-color {
       width: 100%;
       height: 16px; }
+      @media only screen and (min-width: 1248px) {
+        .legend .legend-item .legend-color {
+          width: 42px;
+          height: 24px;
+          margin-right: 0.25em; } }
     .legend .legend-item p {
       font-size: 10px; }
+      @media only screen and (min-width: 1248px) {
+        .legend .legend-item p {
+          font-size: 16px;
+          margin-bottom: 0; } }
+
+@media only screen and (min-width: 1248px) {
+  .visualisatie-right {
+    display: flex;
+    align-items: flex-end;
+    margin-bottom: 7em;
+    margin-left: 2em; } }
 
 .pie-chart-viz-container {
   display: flex;
@@ -175,10 +245,37 @@ div.tooltip {
   .pie-chart-viz-container .pie-chart-container {
     flex: 1;
     height: 300px; }
-    .pie-chart-viz-container .pie-chart-container .pie-chart {
-      background: center/contain no-repeat url("../images/Indicator_Beleving_Vis1.svg");
+    @media only screen and (min-width: 768px) {
+      .pie-chart-viz-container .pie-chart-container {
+        flex: 0;
+        height: auto; } }
+    .pie-chart-viz-container .pie-chart-container .pie-chart img {
       width: 100%;
       height: 100%; }
+
+.barchart-viz-container .barchart-container {
+  margin-bottom: 1em; }
+  .barchart-viz-container .barchart-container .barchart img {
+    width: 100%;
+    height: 100%; }
+
+.barchart-container {
+  margin-bottom: 1em; }
+  .barchart-container .barchart img {
+    width: 100%;
+    height: 100%; }
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none; }
 
 [type="radio"]:checked,
 [type="radio"]:not(:checked) {
@@ -236,6 +333,29 @@ div.tooltip {
   .options label {
     padding-bottom: 1em; }
 
+header {
+  background-color: #000;
+  padding: 1em; }
+  header .flex-parent {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column; }
+    header .flex-parent .flex-child {
+      flex: 1; }
+      header .flex-parent .flex-child:first-of-type {
+        padding-bottom: 1em; }
+      header .flex-parent .flex-child .logo {
+        background: left/contain no-repeat url("../images/logo.svg");
+        width: 100%;
+        height: 5em; }
+    header .flex-parent .titles h1 {
+      color: #fff33d;
+      font-size: 1.5em;
+      text-transform: uppercase; }
+    header .flex-parent .titles h2 {
+      color: #fff;
+      font-size: 1.25em; }
+
 .bold {
   font-weight: 500; }
 
@@ -246,11 +366,20 @@ div.tooltip {
   margin-top: 1em; }
   .cijfer-text-container .numbers {
     display: flex; }
+    @media only screen and (min-width: 1248px) {
+      .cijfer-text-container .numbers {
+        justify-content: center; } }
     .cijfer-text-container .numbers .number-container {
       text-align: left;
       flex: 1; }
+      @media only screen and (min-width: 1248px) {
+        .cijfer-text-container .numbers .number-container {
+          max-width: 230px; } }
       .cijfer-text-container .numbers .number-container:first-of-type {
         margin-right: 1em; }
+        @media only screen and (min-width: 768px) {
+          .cijfer-text-container .numbers .number-container:first-of-type {
+            margin-right: 5em; } }
       .cijfer-text-container .numbers .number-container .big-number {
         text-align: center;
         font-weight: 600;
@@ -259,12 +388,13 @@ div.tooltip {
         font-size: 2em;
         line-height: normal; }
         .cijfer-text-container .numbers .number-container .big-number .bigger-number {
-          font-size: 2em; }
+          font-size: 3em; }
       .cijfer-text-container .numbers .number-container .migratieachtergrond-rectangle {
-        height: 30px;
+        height: 20px;
         width: 100%;
-        border-radius: 8px;
-        margin-bottom: 1em; }
+        border-radius: 6px;
+        margin-bottom: 1em;
+        margin: auto; }
       .cijfer-text-container .numbers .number-container .red {
         background-color: #fc3e46; }
       .cijfer-text-container .numbers .number-container .blue {
@@ -276,12 +406,23 @@ div.tooltip {
 
 .medium-numbers {
   text-align: center; }
+  @media only screen and (min-width: 1248px) {
+    .medium-numbers {
+      display: flex; } }
   .medium-numbers .medium-container {
     margin-bottom: 1em; }
     .medium-numbers .medium-container p {
       margin: 0; }
+    @media only screen and (min-width: 1248px) {
+      .medium-numbers .medium-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center; } }
     .medium-numbers .medium-container .number-container {
       display: flex; }
+      @media only screen and (min-width: 1248px) {
+        .medium-numbers .medium-container .number-container {
+          max-width: 230px; } }
       .medium-numbers .medium-container .number-container .medium-number-container {
         flex: 1; }
         .medium-numbers .medium-container .number-container .medium-number-container:first-of-type {
@@ -292,13 +433,20 @@ div.tooltip {
           font-family: "Rubik", sans-serif;
           font-size: 1.5em;
           line-height: normal; }
+          @media only screen and (min-width: 1248px) {
+            .medium-numbers .medium-container .number-container .medium-number-container .medium-number {
+              font-size: 3em; } }
           .medium-numbers .medium-container .number-container .medium-number-container .medium-number .bigger-number {
             font-size: 1.5em; }
         .medium-numbers .medium-container .number-container .medium-number-container .migratieachtergrond-rectangle {
           height: 30px;
           width: 100%;
           border-radius: 8px;
-          margin-bottom: 0.5em; }
+          margin-bottom: 0.5em;
+          margin: auto; }
+          @media only screen and (min-width: 1248px) {
+            .medium-numbers .medium-container .number-container .medium-number-container .migratieachtergrond-rectangle {
+              height: 15px; } }
         .medium-numbers .medium-container .number-container .medium-number-container .red {
           background-color: #fc3e46; }
         .medium-numbers .medium-container .number-container .medium-number-container .blue {
