--- a/app/src/styles/partials/_visualisatie.scss
+++ b/app/src/styles/partials/_visualisatie.scss
@@ -50,6 +50,14 @@
 	}
 }
 
+#vertrouwen-heatmap {
+	.legend {
+		@include mq("desktop") {
+			flex-direction: column-reverse;
+		}
+	}
+}
+
 .legend {
 	display: flex;
 	max-width: 500px;
@@ -127,9 +135,6 @@
 	}
 }
 .barchart-viz-container {
-	// @include mq("desktop"){
-	// 	margin-top: 5em;
-	// }
 	.barchart-container {
 		margin-bottom: 1em;
 
@@ -148,5 +153,19 @@
 			width: 100%;
 			height: 100%;
 		}
+	}
+}
+.arrow-container {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	@include mq("desktop"){
+		margin-top: 5em;
+	}
+	img {
+		width: 20%;
+		height: 20%;
+		margin: auto;
 	}
 }
